# tree-species-prediction

./: .gitignore  LICENSE  README.md  _bootstrap.py  constants.py  environment.yml  live_dead_workflow.yaml  remap_live_dead.py  symlink_bootstrap.py
1_data_prep/: 01_determine_species_classes.py  01_get_mission_altitude_driver_script.py  02_merge_alt_columns.py  03_pair_drone_with_ground.py  03_produce_combined_photogrammetry.py  04_compute_CHM.py  04_crop_raw_images_to_intersection.py  05_crop_raw_images_to_intersection.py  05_produce_combined_photogrammetry.py  06_compute_CHM.py  06_compute_paired_mission_altitudes.py  06_produce_combined_photogrammetry.py  06_shift_field_trees.py  07_tree_detection.py  08_add_field_attributes_to_drone.py  08_shift_field_trees.py  09_add_field_attributes_to_drone.py  09_crop_raw_images_to_intersection.py  10_determine_species_classes.py  10_render_instance_ids.py  11_create_train_test_split.py  11_crop_trees.py  11_tree_crops.py  12_create_train_val_split.py  (+20 more)
2_training/: analyze.py  dr_sweep.py  experiment_driver.py  pyproject.toml  train.py  train_reduced.py  training_env.yml
2_training/analysis/: vram.py
2_training/data/: dataset.py
2_training/models/: TreeSpeciesClassifier.py
2_training/training_utils/: ctx.py  data_reduction_utils.py  data_utils.py  device_utils.py  early_stop.py  gather_gradients.py  gradmatch.py  image_processing.py  initializers.py  io.py  metrics.py  omp.py  step_epoch.py  visualization.py
2_training/training_utils/data_reduction/: metrics.py  omp.py  plotting.py  selection.py  utils.py
(+27 files in other folders)
