[tool.poetry]
name = "tsp-train"
version = "0.1.0"
description = "Tree species prediction"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.1"
pandas = "^2.3.1"
geopandas = "^1.1.1"
pyproj = "^3.7.1"
shapely = "^2.1.1"
networkx = "^3.4.2"
timm = "^1.0.19"
torch = "^2.5.1"
torchaudio = "^2.5.1"
torchvision = "^0.20.1"
fsspec = "^2025.7.0"
huggingface-hub = "^0.34.4"
packaging = "^25.0"
requests = "^2.32.4"
pillow = "^11.3.0"
python-dateutil = "^2.9.0.post0"
pytz = "^2025.2"
six = "^1.17.0"
safetensors = "^0.6.2"
tqdm = "^4.67.1"
pyyaml = "^6.0.2"
tensorboard = "^2.20.0"
torchmetrics = "^1.8.1"
matplotlib = "^3.10.5"
seaborn = "^0.13.2"
ipykernel = "^6.30.1"

[[tool.poetry.source]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"
